--- a/day01/01.js作用域.html
+++ b/day01/01.js作用域.html
@@ -29,6 +29,10 @@
         }
         test()
         console.log(d);
+
+        // 全局和隐式变区别：隐式全局变量可以通过delete关键字删除，全局变量不可以
+        a1 = 300
+        delete a1
     </script>
 </body>
 
