--- a/day01/03.预解析.html
+++ b/day01/03.预解析.html
@@ -21,7 +21,7 @@
             console.log(num);// undefined 
             var num = 10
         }
-         console.log(test1);
+         console.log(test1); // aaa test1函数会被覆盖
     </script>
 </body>
 </html>
